--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -754,9 +754,12 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   overflow-x: hidden;
   margin-top: -78px;
   z-index: 1;
+  position: relative;
   /* Change color on hover */
 }
 #banner .swiper-wrapper {
+  height: 100%;
+  max-height: 100%;
   position: relative;
   display: flex;
   align-items: center;
@@ -834,8 +837,8 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
 }
 #banner .swiper-button-prev,
 #banner .swiper-button-next {
-  position: absolute !important;
-  top: 45% !important;
+  position: absolute;
+  top: 75%;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -858,5 +861,36 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
 }
 #banner .swiper-button-prev:hover,
 #banner .swiper-button-next:hover {
+  background-color: var(--secondary-accent-color);
+}
+
+#stats {
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 3em 0;
+}
+#stats .container .stat {
+  width: 100%;
+  height: 165px;
+}
+#stats .container .stat .bg-image {
+  z-index: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#stats .container .stat .overlay {
+  opacity: 0.95;
+  z-index: 1;
+}
+#stats .container .stat:nth-of-type(1) .overlay {
+  background-color: var(--primary-accent-color);
+}
+#stats .container .stat:nth-of-type(2) .overlay {
+  background-color: var(--secondary-accent-color);
+}
+#stats .container .stat:nth-of-type(3) .overlay {
+  background-color: var(--primary-accent-color);
+}
+#stats .container .stat:nth-of-type(4) .overlay {
   background-color: var(--secondary-accent-color);
 }/*# sourceMappingURL=style.css.map */
