--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 100vh;
 	overflow-x: hidden;
-	margin-top: -78px;
+	margin-top: -75px;
 	z-index: 1;
 	position: relative;
 
@@ -130,7 +130,9 @@
 	.container {
 		.stat {
 			width: 100%;
-			height: 165px;
+			min-height: 165px;
+			color: var(--background-color);
+			padding: 0.8em;
 			.bg-image {
 				z-index: 0;
 				object-fit: cover;
@@ -138,6 +140,34 @@
 			.overlay {
 				opacity: 0.95;
 				z-index: 1;
+			}
+			h4 {
+				z-index: 2;
+				margin-top: 0.5em;
+			}
+			.stat-icon {
+				width: 54px;
+				height: 60px;
+				object-fit: contain;
+				z-index: 2;
+			}
+			.stat-btn {
+				align-self: flex-end;
+				z-index: 2;
+				img {
+					width: 40px;
+					height: 40px;
+					object-fit: contain;
+				}
+			}
+			p {
+				z-index: 2;
+			}
+			.btn-sm {
+				align-self: flex-end;
+				z-index: 2;
+				background-color: var(--background-color);
+				color: var(--primary-accent-color);
 			}
 			&:nth-of-type(1) {
 				.overlay {
@@ -151,12 +181,258 @@
 			}
 			&:nth-of-type(3) {
 				.overlay {
-					background-color: var(--primary-accent-color);
+					background-color: #ff4c00;
 				}
 			}
 			&:nth-of-type(4) {
 				.overlay {
-					background-color: var(--secondary-accent-color);
+					background-color: #9a3821;
+				}
+				.wrapper {
+					z-index: 2;
+				}
+				h4 {
+					font-size: 24px;
+					margin-top: 0;
+				}
+			}
+		}
+	}
+}
+
+#about {
+	background-color: #e2231a0f;
+	height: auto;
+	.image-container {
+		height: 650px;
+		width: 45%;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	.content {
+		width: 50%;
+		height: fit-content;
+		padding: 0 5%;
+		h5 {
+			color: var(--primary-accent-color);
+		}
+		h2 {
+			color: var(--foreground-color);
+		}
+		p {
+			color: var(--foreground-color);
+		}
+		.facts {
+			.fact {
+				width: 48%;
+				img {
+					width: 40px;
+					height: 40px;
+					object-fit: contain;
+				}
+				p {
+					color: var(--foreground-color);
+					font-weight: 700;
+				}
+			}
+		}
+		a {
+			background-color: var(--primary-accent-color);
+			color: var(--background-color);
+		}
+	}
+}
+
+#locations {
+	width: 100%;
+	height: 100vh;
+	overflow-x: hidden;
+	z-index: 1;
+	position: relative;
+
+	.bg-image {
+		z-index: 0;
+		opacity: 0.1;
+		object-fit: cover;
+	}
+
+	.swiper-wrapper {
+		height: 100%;
+		max-height: 100%;
+		position: relative;
+		display: flex;
+		align-items: center;
+	}
+
+	.swiper-slide {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0 6%;
+		z-index: 5;
+
+		.slide-content {
+			max-width: 45%;
+			h5 {
+				color: #282828;
+				margin-bottom: 5px;
+			}
+
+			h4 {
+				font-size: 30px;
+				font-weight: 700;
+				line-height: 34.5px;
+				color: var(--primary-accent-color);
+			}
+
+			.btn-sm {
+				color: #fff;
+				background-color: #ff4c00;
+				margin-top: 1.5em;
+				img {
+					width: 26px;
+					height: 26px;
+					object-fit: contain;
+					margin-left: 0.5em;
+				}
+			}
+		}
+
+		.image-container {
+			position: relative;
+			align-self: flex-end;
+			max-width: 50%;
+			height: 90%;
+			img.main-image {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				z-index: 2;
+			}
+			.bg-image {
+				z-index: -1;
+				opacity: 0.4;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+		}
+	}
+
+	.swiper-pagination {
+		bottom: 20px;
+	}
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		position: absolute;
+		top: 75%;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		background-color: var(--primary-accent-color);
+		color: var(--background-color);
+		font-size: 30px;
+		z-index: 10;
+		cursor: pointer;
+		transition: all 0.3s ease-in;
+		&:after {
+			display: none;
+		}
+	}
+
+	.swiper-button-prev {
+		left: 40%;
+	}
+
+	.swiper-button-next {
+		left: 45%;
+	}
+
+	/* Change color on hover */
+	.swiper-button-prev:hover,
+	.swiper-button-next:hover {
+		background-color: var(--secondary-accent-color);
+	}
+}
+
+#news {
+	background-color: #e2231a0f;
+	padding: 3em 0;
+	.container {
+		.title-section {
+			.content {
+				width: 70%;
+				h5 {
+					color: var(--primary-accent-color);
+				}
+				h2 {
+					color: var(--foreground-color);
+				}
+			}
+			a {
+				background-color: var(--primary-accent-color);
+				color: var(--background-color);
+				img {
+					margin-left: 0.5em;
+				}
+			}
+		}
+
+		.news-grid {
+			.post {
+				height: auto;
+				.image-wrapper {
+					height: 227px;
+					width: 100%;
+					position: relative;
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+					span {
+						position: absolute;
+						top: 10px;
+						right: 10px;
+						background-color: var(--primary-accent-color);
+						padding: 3px 6px;
+						color: var(--background-color);
+						font-size: 12px;
+						font-weight: 700;
+					}
+				}
+				.content {
+					width: 100%;
+					height: 180px;
+					background-color: var(--background-color);
+					padding: 0 1em;
+					padding-top: 0.5em;
+					padding-bottom: 1em;
+					h6 {
+						font-size: 14px;
+						font-weight: 700;
+						line-height: 16.1px;
+						color: #00000080;
+					}
+					p {
+						font-size: 20px;
+						font-weight: 700;
+						line-height: 23px;
+						color: var(--foreground-color);
+					}
+					a {
+						background-color: var(--primary-accent-color);
+						color: var(--background-color);
+					}
 				}
 			}
 		}
