--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,6 +51,13 @@ h2 {
 }
 
 //Tertiary Title
+h4 {
+	font-size: 22px;
+	font-weight: 700;
+	line-height: 27.6px;
+}
+
+//Mini Title
 h5 {
 	font-size: 16px;
 	font-weight: 700;
@@ -63,7 +70,7 @@ a,
 ul {
 	font-size: 16px;
 	font-weight: 500;
-	line-height: 18.4px;
+	line-height: 22px;
 	text-decoration: none;
 }
 
@@ -102,7 +109,7 @@ button {
 	position: relative;
 	height: fit-content;
 	width: fit-content;
-	padding: 8px 18px;
+	padding: 7px 18px;
 	font-size: 16px;
 	font-weight: 700;
 	line-height: 18.4px;
