--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -877,3 +877,6 @@ footer {
 @import "./home";
 @import "./about";
 @import "./services";
+@import "./partners";
+@import "./news";
+@import "./careers";
